# Cluster

./: .gitignore  CMakeLists.txt  Makefile  README.md  bot.c  bot2  client.c  run_tournament.sh
.github/workflows/: build-macos.yml  build-ubuntu.yml
bots/: .gitignore  CMakeLists.txt  Jorien.c  Makefile
include/: cluster.h  gameinfo.h  mlx.h  move.h  player.h  threads.h  utils.h
maps/: grid5.txt
output/: grid5.txt  print_grid.c  print_grid_terminal.c
srcs/: check_tile_colour.c  main.c  player.c  threads.c
srcs/field/: dead_tiles.c  directions.c  drop_tile.c  init_field.c  rotate.c  tile.c  tileorder.c
srcs/gameinfo/: gameinfo_dtor.c  gameinfo_init.c
srcs/move/: drop_tile.c  move.c  rotate.c
srcs/output/: generate.c  graphics_mlx.c  print_grid_terminal.c
srcs/player/: input.c  inventory.c  output.c  play_turn.c  player.c  process.c
srcs/utils/: alloc.c
tests/: rotate_test_moveset.txt  test_directions.c
